fixes paragraph tag on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -20,10 +20,6 @@
 		font-weight: 300;
 	}
 	
-	p {
-			width: 100%;
-	}
-	
 	.container
 	{
 		padding: 0 15px 0 15px;
