--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -22,10 +22,6 @@
 			display: none;
 		}
 	
-	p {
-			width: 100%;
-	}
-	
 	.container
 	{
 		padding: 0 2em 0 2em;
